--- a/package.json
+++ b/package.json
@@ -18,16 +18,24 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "serve": "vue-cli-service serve"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.0",
+    "@vue/cli": "^5.0.8",
+    "express-handlebars": "^6.0.6",
     "hbs": "^4.2.0",
+    "mongoose": "^6.4.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "vue": "^2.7.5",
+    "vue-class-component": "^7.2.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
